<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/remove_category"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2.3">

        <ImageView
            android:id="@+id/category_to_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_movie"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_arrow_right"
            android:layout_weight="0.3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_rubbish_bin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/back_to_main"
            android:layout_width="73dp"
            android:layout_height="50dp"
            android:layout_weight="0.35"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/remove_category"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.35"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>